--- a/styles/ex-mode.less
+++ b/styles/ex-mode.less
@@ -7,6 +7,6 @@
 .ex-mode {
 }
 
-.command-mode-input atom-text-editor[mini]::before {
+div[is=ex-command-mode-input] atom-text-editor[mini]::before {
   content: ":";
 }
