prefix vim-mode's search

--- a/styles/ex-mode.less
+++ b/styles/ex-mode.less
@@ -11,6 +11,10 @@ div[is=ex-command-mode-input] atom-text-editor[mini]::before {
   content: ":";
 }
 
+div[is=vim-normal-mode-input] atom-text-editor[mini]::before {
+  content: "/";
+}
+
 .command-mode-input atom-text-editor[mini] {
   background-color: inherit;
   border: none;
