distinguish prefix from input

--- a/styles/ex-mode.less
+++ b/styles/ex-mode.less
@@ -9,10 +9,12 @@
 
 div[is=ex-command-mode-input] atom-text-editor[mini]::before {
   content: ":";
+  opacity: 0.5;
 }
 
 div[is=vim-normal-mode-input] atom-text-editor[mini]::before {
   content: "/";
+  opacity: 0.5;
 }
 
 .command-mode-input atom-text-editor[mini] {
